welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: type mismatch;
 found   : Int(21)
 required: Boolean
if (talking && 7 < hour < 21)
                          ^