welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {

if (talking && 7 < hour < 21)
{
	return true
}
else false 
}